fixed textGridWithMedia alignment issue with big image

--- a/components/agility-pageModules/textGridWithMedia/textGridWithMedia.module.scss
+++ b/components/agility-pageModules/textGridWithMedia/textGridWithMedia.module.scss
@@ -128,7 +128,7 @@
   .textItem {
     display: flex;
     padding: 1.5rem;
-    height: 100%;
+    /* height: 100%; */
     overflow: hidden;
   }
   &:not(.logoLeftHeaderRight) {
@@ -272,4 +272,7 @@
 }
 .justify-content-flex-end {
   justify-content: flex-end;
+  .textItem {
+    height: 100%;
+  }
 }
