--- a/styles/layout.scss
+++ b/styles/layout.scss
@@ -94,6 +94,9 @@
 }
 .justify-content-flex-start {
   justify-content: flex-start !important;
+  .grid-column {
+    height: 100%;
+  }
 }
 .justify-content-flex-end {
   justify-content: flex-end !important;
